ProductList - implemented read_one view. Added tests
